plugins {
    id 'java'
}

allprojects {
    group = 'com.aresstack'
    version = '0.1.0-SNAPSHOT'
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'
    compileJava.options.compilerArgs += ['--enable-preview']
    compileTestJava.options.compilerArgs += ['--enable-preview']

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
    }

    dependencies {
        implementation 'org.slf4j:slf4j-api:2.0.13'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testRuntimeOnly 'ch.qos.logback:logback-classic:1.5.6'
    }
}
